Add jupyter notebooks for experiments

--- a/notebooks/ddpg_half_cheetah.ipynb
+++ b/notebooks/ddpg_half_cheetah.ipynb
@@ -4,18 +4,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# DQN on Cartpole\n",
+    "# DDPG on Half Cheetah\n",
     "\n",
-    "In this example we will see how to train a DQN agent using `torchrl`. We assume basic knowledge about Reinforcement Learning and DQN. See [Documentation](https://torchrl.sanyamkapoor.com/) for an introduction to *TorchRL* and installation instructions."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Problem Specification\n",
+    "In this example we will see how to train a Deep deterministic policy gradiant (DDPG) agent using `torchrl`. See [Documentation](https://torchrl.sanyamkapoor.com/) for an introduction to *TorchRL* and installation instructions.\n",
     "\n",
-    "The full problem can specified in **less than 50 lines of code**!"
+    "This notebook requires mujoco-py. See [this](https://github.com/openai/mujoco-py) for installation instructions.\n"
    ]
   },
   {
@@ -27,18 +20,17 @@
     "import argparse\n",
     "import torch\n",
     "import numpy as np\n",
-    "\n",
     "from torchrl import registry\n",
     "from torchrl import utils\n",
-    "from torchrl.problems import base_hparams, DQNProblem\n",
-    "from torchrl.agents import BaseDQNAgent"
+    "from torchrl.problems import base_hparams, DDPGProblem\n",
+    "from torchrl.agents import BaseDDPGAgent"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We use a pre-built version of the DQN agent from *TorchRL* library to initialize a `Problem`. This `Problem` class is also based on a pre-built version from the library."
+    "We use a pre-built version of the DDPG agent from *TorchRL* library to initialize a `Problem`. This `Problem` class is also based on a pre-built version from the library."
    ]
   },
   {
@@ -47,17 +39,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "class DQNCartpole(DQNProblem):\n",
+    "class DDPGHalfCheetah(DDPGProblem):\n",
     "  def init_agent(self):\n",
     "    observation_space, action_space = utils.get_gym_spaces(self.runner.make_env)\n",
     "\n",
-    "    agent = BaseDQNAgent(\n",
+    "    agent = BaseDDPGAgent(\n",
     "        observation_space,\n",
     "        action_space,\n",
-    "        double_dqn=self.hparams.double_dqn,\n",
-    "        lr=self.hparams.actor_lr,\n",
+    "        actor_lr=self.hparams.actor_lr,\n",
+    "        critic_lr=self.hparams.critic_lr,\n",
     "        gamma=self.hparams.gamma,\n",
-    "        target_update_interval=self.hparams.target_update_interval)\n",
+    "        tau=self.hparams.tau)\n",
     "\n",
     "    return agent"
    ]
@@ -66,16 +58,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This class requires us to extend the `init_agent` method. There is no restriction on the contents as long as it returns a valid `BaseAgent`."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "This class requires us to extend the init_agent method. There is no restriction on the contents as long as it returns a valid BaseAgent.\n",
+    "\n",
     "## Hyperparameter Specification\n",
     "\n",
-    "We use the `HParams` object from the library to add custom properties. Again, arbitrary properties can be provided to such objects as long as they are consistently used within the previously specified `Problem` class (e.g. within the `init_agent` routine)."
+    "We use the `HParams` object from the library to add custom properties. Again, arbitrary properties can be provided to such objects as long as they are consistently used within the previously specified `Problem` class (e.g. within the `init_agent` routine).\n"
    ]
   },
   {
@@ -84,21 +71,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def hparams_dqn_cartpole():\n",
-    "    params = base_hparams.base_dqn()\n",
+    "def hparams_ddpg_half_cheetah():\n",
+    "    params = base_hparams.base_ddpg()\n",
     "\n",
-    "    params.env_id = 'CartPole-v1'\n",
+    "    params.env_id = 'HalfCheetah-v2'\n",
+    "\n",
+    "    params.num_processes = 16\n",
     "\n",
     "    params.rollout_steps = 1\n",
-    "    params.num_processes = 1\n",
-    "    params.actor_lr = 1e-3\n",
+    "    params.max_episode_steps = 500\n",
+    "    params.num_total_steps = int(2e6)\n",
+    "\n",
     "    params.gamma = 0.99\n",
-    "    params.target_update_interval = 10\n",
-    "    params.eps_min = 1e-2\n",
-    "    params.buffer_size = 1000\n",
-    "    params.batch_size = 32\n",
-    "    params.num_total_steps = 5000\n",
-    "    params.num_eps_steps = 500\n",
+    "    params.buffer_size = int(1e6)\n",
+    "\n",
+    "    params.batch_size = 128\n",
+    "    params.tau = 1e-2\n",
+    "    params.actor_lr = 1e-4\n",
+    "    params.critic_lr = 1e-3\n",
     "\n",
     "    return params"
    ]
@@ -129,8 +119,8 @@
     "    num_eval=1,\n",
     ")\n",
     "\n",
-    "dqn_cartpole = DQNCartpole(\n",
-    "    hparams_dqn_cartpole(),\n",
+    "ddpg_half_cheetah = DDPGHalfCheetah(\n",
+    "    hparams_ddpg_half_cheetah(),\n",
     "    argparse.Namespace(**args),\n",
     "    None, # Disable logging\n",
     "    device=device,\n",
@@ -142,7 +132,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Training the DQN Agent\n",
+    "## Training the DDPG Agent\n",
     "\n",
     "Calling the `run()` routine allows us to execute training. Note that for now we have disabled logging by keeping `log_dir=None` in the above instatiation."
    ]
@@ -156,51 +146,45 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 5000/5000 [00:14<00:00, 301.06epochs/s]\n"
+      "100%|██████████| 125000/125000 [30:41<00:00, 67.86epochs/s] \n"
      ]
     }
    ],
    "source": [
-    "dqn_cartpole.run()"
+    "ddpg_half_cheetah.run()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Evaluate Training\n",
-    "\n",
-    "Quoting the documentation, this environment is\n",
-    "\n",
-    "> Considered solved when the average reward is greater than or equal to 195.0 over 100 consecutive trials.\n",
-    "\n",
-    "Let's see if we were able to achieve that. We use parallel environments for faster evaluation."
+    "## Evaluate Training\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 35.2 s, sys: 2.5 s, total: 37.7 s\n",
-      "Wall time: 39.7 s\n"
+      "CPU times: user 6.08 s, sys: 1.29 s, total: 7.36 s\n",
+      "Wall time: 8.3 s\n"
      ]
     }
    ],
    "source": [
     "%%time\n",
     "\n",
-    "dqn_cartpole.agent.train(False)\n",
+    "ddpg_half_cheetah.agent.train(False)\n",
     "\n",
-    "eval_runner = dqn_cartpole.make_runner(n_envs=10)\n",
+    "eval_runner = ddpg_half_cheetah.make_runner(n_envs=10)\n",
     "eval_rewards = []\n",
-    "for _ in range(100 // dqn_cartpole.runner.n_envs):\n",
-    "  eval_history = eval_runner.rollout(dqn_cartpole.agent)\n",
-    "  for i in range(dqn_cartpole.runner.n_envs):\n",
+    "for _ in range(100 // ddpg_half_cheetah.runner.n_envs):\n",
+    "  eval_history = eval_runner.rollout(ddpg_half_cheetah.agent)\n",
+    "  for i in range(ddpg_half_cheetah.runner.n_envs):\n",
     "    _, _, reward_history, _, _ = eval_history[0]\n",
     "    eval_rewards.append(np.sum(reward_history, axis=0))\n",
     "eval_runner.close()"
@@ -208,51 +192,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Reward: 273.17 +/- 142.67628078976549\n",
-      "Did we possibly win? Yay!\n"
+      "Reward: 672.4418830774515 +/- 36.763124177817204\n"
      ]
     }
    ],
    "source": [
     "avg_reward, std_reward = np.average(eval_rewards), np.std(eval_rewards)\n",
-    "possible_win = avg_reward > 195.0\n",
-    "\n",
-    "print('Reward: {} +/- {}'.format(avg_reward, std_reward))\n",
-    "print('Did we possibly win? {}!'.format('Yay' if possible_win else 'Nay'))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Visualization"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "vis_runner = dqn_cartpole.make_runner(n_envs=1)\n",
-    "vis_runner.rollout(dqn_cartpole.agent,render = True)\n",
-    "vis_runner.close()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## What's next?\n",
-    "\n",
-    "See [Documentation](https://torchrl.sanyamkapoor.com/) for full details on the flexibility of the API."
+    "print('Reward: {} +/- {}'.format(avg_reward, std_reward))\n"
    ]
   }
  ],
