--- a/notebooks/ddpg_pendulum.ipynb
+++ b/notebooks/ddpg_pendulum.ipynb
@@ -4,9 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# DQN on Cartpole\n",
+    "# DDPG on Pendulum\n",
     "\n",
-    "In this example we will see how to train a DQN agent using `torchrl`. We assume basic knowledge about Reinforcement Learning and DQN. See [Documentation](https://torchrl.sanyamkapoor.com/) for an introduction to *TorchRL* and installation instructions."
+    "In this example we will see how to train a Deep deterministic policy gradiant (DDPG) agent using `torchrl`. See [Documentation](https://torchrl.sanyamkapoor.com/) for an introduction to *TorchRL* and installation instructions."
    ]
   },
   {
@@ -27,18 +27,17 @@
     "import argparse\n",
     "import torch\n",
     "import numpy as np\n",
-    "\n",
     "from torchrl import registry\n",
     "from torchrl import utils\n",
-    "from torchrl.problems import base_hparams, DQNProblem\n",
-    "from torchrl.agents import BaseDQNAgent"
+    "from torchrl.problems import base_hparams, DDPGProblem\n",
+    "from torchrl.agents import BaseDDPGAgent"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We use a pre-built version of the DQN agent from *TorchRL* library to initialize a `Problem`. This `Problem` class is also based on a pre-built version from the library."
+    "We use a pre-built version of the DDPG agent from *TorchRL* library to initialize a `Problem`. This `Problem` class is also based on a pre-built version from the library."
    ]
   },
   {
@@ -47,17 +46,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "class DQNCartpole(DQNProblem):\n",
+    "class DDPGPendulum(DDPGProblem):\n",
     "  def init_agent(self):\n",
     "    observation_space, action_space = utils.get_gym_spaces(self.runner.make_env)\n",
     "\n",
-    "    agent = BaseDQNAgent(\n",
+    "    agent = BaseDDPGAgent(\n",
     "        observation_space,\n",
     "        action_space,\n",
-    "        double_dqn=self.hparams.double_dqn,\n",
-    "        lr=self.hparams.actor_lr,\n",
+    "        actor_lr=self.hparams.actor_lr,\n",
+    "        critic_lr=self.hparams.critic_lr,\n",
     "        gamma=self.hparams.gamma,\n",
-    "        target_update_interval=self.hparams.target_update_interval)\n",
+    "        tau=self.hparams.tau)\n",
     "\n",
     "    return agent"
    ]
@@ -84,21 +83,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def hparams_dqn_cartpole():\n",
-    "    params = base_hparams.base_dqn()\n",
+    "def hparams_ddpg_pendulum():\n",
+    "    params = base_hparams.base_ddpg()\n",
     "\n",
-    "    params.env_id = 'CartPole-v1'\n",
+    "    params.env_id = 'Pendulum-v0'\n",
+    "\n",
+    "    params.num_processes = 1\n",
     "\n",
     "    params.rollout_steps = 1\n",
-    "    params.num_processes = 1\n",
-    "    params.actor_lr = 1e-3\n",
+    "    params.max_episode_steps = 500\n",
+    "    params.num_total_steps = 20000\n",
+    "\n",
     "    params.gamma = 0.99\n",
-    "    params.target_update_interval = 10\n",
-    "    params.eps_min = 1e-2\n",
-    "    params.buffer_size = 1000\n",
-    "    params.batch_size = 32\n",
-    "    params.num_total_steps = 5000\n",
-    "    params.num_eps_steps = 500\n",
+    "    params.buffer_size = int(1e6)\n",
+    "\n",
+    "    params.batch_size = 128\n",
+    "    params.tau = 1e-2\n",
+    "    params.actor_lr = 1e-4\n",
+    "    params.critic_lr = 1e-3\n",
     "\n",
     "    return params"
    ]
@@ -116,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,8 +131,8 @@
     "    num_eval=1,\n",
     ")\n",
     "\n",
-    "dqn_cartpole = DQNCartpole(\n",
-    "    hparams_dqn_cartpole(),\n",
+    "ddpg_pendulum = DDPGPendulum(\n",
+    "    hparams_ddpg_pendulum(),\n",
     "    argparse.Namespace(**args),\n",
     "    None, # Disable logging\n",
     "    device=device,\n",
@@ -142,68 +144,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Training the DQN Agent\n",
+    "## Training the DDPG Agent\n",
     "\n",
     "Calling the `run()` routine allows us to execute training. Note that for now we have disabled logging by keeping `log_dir=None` in the above instatiation."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 5000/5000 [00:14<00:00, 301.06epochs/s]\n"
-     ]
-    }
-   ],
-   "source": [
-    "dqn_cartpole.run()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Evaluate Training\n",
-    "\n",
-    "Quoting the documentation, this environment is\n",
-    "\n",
-    "> Considered solved when the average reward is greater than or equal to 195.0 over 100 consecutive trials.\n",
-    "\n",
-    "Let's see if we were able to achieve that. We use parallel environments for faster evaluation."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CPU times: user 35.2 s, sys: 2.5 s, total: 37.7 s\n",
-      "Wall time: 39.7 s\n"
-     ]
-    }
-   ],
-   "source": [
-    "%%time\n",
-    "\n",
-    "dqn_cartpole.agent.train(False)\n",
-    "\n",
-    "eval_runner = dqn_cartpole.make_runner(n_envs=10)\n",
-    "eval_rewards = []\n",
-    "for _ in range(100 // dqn_cartpole.runner.n_envs):\n",
-    "  eval_history = eval_runner.rollout(dqn_cartpole.agent)\n",
-    "  for i in range(dqn_cartpole.runner.n_envs):\n",
-    "    _, _, reward_history, _, _ = eval_history[0]\n",
-    "    eval_rewards.append(np.sum(reward_history, axis=0))\n",
-    "eval_runner.close()"
    ]
   },
   {
@@ -212,20 +155,76 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 20000/20000 [02:04<00:00, 161.05epochs/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "ddpg_pendulum.run()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Evaluate Training\n",
+    "The pendulum starts in a random position, and the goal is to swing it up so it stays upright.\n",
+    "Quoting the documentation, \n",
+    "\n",
+    "> Pendulum-v0 is an unsolved environment, which means it does not have a specified reward threshold at which it's considered solved\n",
+    "\n",
+    "Best 100-episode performance according to the leaderboard is -123.11 ± 6.86\t\t\t\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Reward: 273.17 +/- 142.67628078976549\n",
-      "Did we possibly win? Yay!\n"
+      "CPU times: user 16.1 s, sys: 1.56 s, total: 17.6 s\n",
+      "Wall time: 18.1 s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "\n",
+    "ddpg_pendulum.agent.train(False)\n",
+    "\n",
+    "eval_runner = ddpg_pendulum.make_runner(n_envs=10)\n",
+    "eval_rewards = []\n",
+    "for _ in range(100 // ddpg_pendulum.runner.n_envs):\n",
+    "  eval_history = eval_runner.rollout(ddpg_pendulum.agent)\n",
+    "  for i in range(ddpg_pendulum.runner.n_envs):\n",
+    "    _, _, reward_history, _, _ = eval_history[0]\n",
+    "    eval_rewards.append(np.sum(reward_history, axis=0))\n",
+    "eval_runner.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Reward: -305.32157057072834 +/- 128.84233516455896\n"
      ]
     }
    ],
    "source": [
     "avg_reward, std_reward = np.average(eval_rewards), np.std(eval_rewards)\n",
-    "possible_win = avg_reward > 195.0\n",
     "\n",
-    "print('Reward: {} +/- {}'.format(avg_reward, std_reward))\n",
-    "print('Did we possibly win? {}!'.format('Yay' if possible_win else 'Nay'))"
+    "print('Reward: {} +/- {}'.format(avg_reward, std_reward))\n"
    ]
   },
   {
@@ -237,23 +236,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "vis_runner = dqn_cartpole.make_runner(n_envs=1)\n",
-    "vis_runner.rollout(dqn_cartpole.agent,render = True)\n",
+    "vis_runner = ddpg_pendulum.make_runner(n_envs=1)\n",
+    "vis_runner.rollout(ddpg_pendulum.agent,render = True)\n",
     "vis_runner.close()"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
-   "source": [
-    "## What's next?\n",
-    "\n",
-    "See [Documentation](https://torchrl.sanyamkapoor.com/) for full details on the flexibility of the API."
-   ]
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
