--- a/notebooks/a2c_cartpole.ipynb
+++ b/notebooks/a2c_cartpole.ipynb
@@ -4,9 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# DQN on Cartpole\n",
+    "# A2C on Cartpole\n",
     "\n",
-    "In this example we will see how to train a DQN agent using `torchrl`. We assume basic knowledge about Reinforcement Learning and DQN. See [Documentation](https://torchrl.sanyamkapoor.com/) for an introduction to *TorchRL* and installation instructions."
+    "In this example we will see how to train a Advantage Actor critic (A2C) agent using `torchrl`. See [Documentation](https://torchrl.sanyamkapoor.com/) for an introduction to *TorchRL* and installation instructions."
    ]
   },
   {
@@ -30,15 +30,15 @@
     "\n",
     "from torchrl import registry\n",
     "from torchrl import utils\n",
-    "from torchrl.problems import base_hparams, DQNProblem\n",
-    "from torchrl.agents import BaseDQNAgent"
+    "from torchrl.problems import base_hparams, A2CProblem\n",
+    "from torchrl.agents import BaseA2CAgent"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We use a pre-built version of the DQN agent from *TorchRL* library to initialize a `Problem`. This `Problem` class is also based on a pre-built version from the library."
+    "We use a pre-built version of the A2C agent from *TorchRL* library to initialize a `Problem`. This `Problem` class is also based on a pre-built version from the library."
    ]
   },
   {
@@ -47,17 +47,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "class DQNCartpole(DQNProblem):\n",
+    "class A2CCartpole(A2CProblem):\n",
     "  def init_agent(self):\n",
     "    observation_space, action_space = utils.get_gym_spaces(self.runner.make_env)\n",
     "\n",
-    "    agent = BaseDQNAgent(\n",
+    "    agent = BaseA2CAgent(\n",
     "        observation_space,\n",
     "        action_space,\n",
-    "        double_dqn=self.hparams.double_dqn,\n",
     "        lr=self.hparams.actor_lr,\n",
     "        gamma=self.hparams.gamma,\n",
-    "        target_update_interval=self.hparams.target_update_interval)\n",
+    "        lmbda=self.hparams.lmbda,\n",
+    "        alpha=self.hparams.alpha,\n",
+    "        beta=self.hparams.beta)\n",
     "\n",
     "    return agent"
    ]
@@ -84,23 +85,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def hparams_dqn_cartpole():\n",
-    "    params = base_hparams.base_dqn()\n",
+    "def hparams_a2c_cartpole():\n",
+    "    params = base_hparams.base_pg()\n",
     "\n",
-    "    params.env_id = 'CartPole-v1'\n",
+    "    params.env_id = 'CartPole-v0'\n",
     "\n",
-    "    params.rollout_steps = 1\n",
-    "    params.num_processes = 1\n",
-    "    params.actor_lr = 1e-3\n",
+    "    params.num_processes = 16\n",
+    "\n",
+    "    params.rollout_steps = 5\n",
+    "    params.max_episode_steps = 500\n",
+    "    params.num_total_steps = int(1e6)\n",
+    "\n",
+    "    params.alpha = 0.5\n",
     "    params.gamma = 0.99\n",
-    "    params.target_update_interval = 10\n",
-    "    params.eps_min = 1e-2\n",
-    "    params.buffer_size = 1000\n",
-    "    params.batch_size = 32\n",
-    "    params.num_total_steps = 5000\n",
-    "    params.num_eps_steps = 500\n",
+    "    params.beta = 1e-3\n",
+    "    params.lmbda = 1.0\n",
     "\n",
-    "    return params"
+    "    params.batch_size = 128\n",
+    "    params.tau = 1e-2\n",
+    "    params.actor_lr = 3e-4\n",
+    "\n",
+    "    return params\n"
    ]
   },
   {
@@ -129,8 +134,8 @@
     "    num_eval=1,\n",
     ")\n",
     "\n",
-    "dqn_cartpole = DQNCartpole(\n",
-    "    hparams_dqn_cartpole(),\n",
+    "a2c_cartpole = A2CCartpole(\n",
+    "    hparams_a2c_cartpole(),\n",
     "    argparse.Namespace(**args),\n",
     "    None, # Disable logging\n",
     "    device=device,\n",
@@ -142,7 +147,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Training the DQN Agent\n",
+    "## Training the A2C Agent\n",
     "\n",
     "Calling the `run()` routine allows us to execute training. Note that for now we have disabled logging by keeping `log_dir=None` in the above instatiation."
    ]
@@ -156,12 +161,12 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 5000/5000 [00:14<00:00, 301.06epochs/s]\n"
+      "100%|██████████| 12500/12500 [05:58<00:00, 34.86epochs/s]\n"
      ]
     }
    ],
    "source": [
-    "dqn_cartpole.run()"
+    "a2c_cartpole.run()"
    ]
   },
   {
@@ -186,21 +191,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 35.2 s, sys: 2.5 s, total: 37.7 s\n",
-      "Wall time: 39.7 s\n"
+      "CPU times: user 1.2 s, sys: 221 ms, total: 1.43 s\n",
+      "Wall time: 1.51 s\n"
      ]
     }
    ],
    "source": [
     "%%time\n",
     "\n",
-    "dqn_cartpole.agent.train(False)\n",
+    "a2c_cartpole.agent.train(False)\n",
     "\n",
-    "eval_runner = dqn_cartpole.make_runner(n_envs=10)\n",
+    "eval_runner = a2c_cartpole.make_runner(n_envs=10)\n",
     "eval_rewards = []\n",
-    "for _ in range(100 // dqn_cartpole.runner.n_envs):\n",
-    "  eval_history = eval_runner.rollout(dqn_cartpole.agent)\n",
-    "  for i in range(dqn_cartpole.runner.n_envs):\n",
+    "for _ in range(100 // a2c_cartpole.runner.n_envs):\n",
+    "  eval_history = eval_runner.rollout(a2c_cartpole.agent)\n",
+    "  for i in range(a2c_cartpole.runner.n_envs):\n",
     "    _, _, reward_history, _, _ = eval_history[0]\n",
     "    eval_rewards.append(np.sum(reward_history, axis=0))\n",
     "eval_runner.close()"
@@ -215,8 +220,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Reward: 273.17 +/- 142.67628078976549\n",
-      "Did we possibly win? Yay!\n"
+      "Reward: 170.5 +/- 18.714967272212903\n",
+      "Did we possibly win? Nay!\n"
      ]
     }
    ],
@@ -241,19 +246,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "vis_runner = dqn_cartpole.make_runner(n_envs=1)\n",
-    "vis_runner.rollout(dqn_cartpole.agent,render = True)\n",
+    "vis_runner = a2c_cartpole.make_runner(n_envs=1)\n",
+    "vis_runner.rollout(a2c_cartpole.agent,render = True)\n",
     "vis_runner.close()"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
-   "source": [
-    "## What's next?\n",
-    "\n",
-    "See [Documentation](https://torchrl.sanyamkapoor.com/) for full details on the flexibility of the API."
-   ]
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
