--- a/notebooks/prioritized_dqn_cartpole.ipynb
+++ b/notebooks/prioritized_dqn_cartpole.ipynb
@@ -4,9 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# DQN on Cartpole\n",
+    "# Prioritized DQN on Cartpole\n",
     "\n",
-    "In this example we will see how to train a DQN agent using `torchrl`. We assume basic knowledge about Reinforcement Learning and DQN. See [Documentation](https://torchrl.sanyamkapoor.com/) for an introduction to *TorchRL* and installation instructions."
+    "In this example we will see how to train a Prioritized DQN agent using `torchrl`. We assume basic knowledge about Reinforcement Learning and Prioritized DQN. See [Documentation](https://torchrl.sanyamkapoor.com/) for an introduction to *TorchRL* and installation instructions."
    ]
   },
   {
@@ -30,8 +30,10 @@
     "\n",
     "from torchrl import registry\n",
     "from torchrl import utils\n",
-    "from torchrl.problems import base_hparams, DQNProblem\n",
-    "from torchrl.agents import BaseDQNAgent"
+    "from torchrl.problems import PrioritizedDQNProblem\n",
+    "from torchrl.agents import BaseDQNAgent\n",
+    "\n",
+    "from cartpole_v1 import DQNCartpole"
    ]
   },
   {
@@ -47,7 +49,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "class DQNCartpole(DQNProblem):\n",
+    "class PERCartpole(PrioritizedDQNProblem):\n",
     "  def init_agent(self):\n",
     "    observation_space, action_space = utils.get_gym_spaces(self.runner.make_env)\n",
     "\n",
@@ -57,6 +59,7 @@
     "        double_dqn=self.hparams.double_dqn,\n",
     "        lr=self.hparams.actor_lr,\n",
     "        gamma=self.hparams.gamma,\n",
+    "        num_eps_steps=self.hparams.num_eps_steps,\n",
     "        target_update_interval=self.hparams.target_update_interval)\n",
     "\n",
     "    return agent"
@@ -84,21 +87,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def hparams_dqn_cartpole():\n",
-    "    params = base_hparams.base_dqn()\n",
+    "def hparams_per_cartpole():\n",
+    "    params = DQNCartpole.hparams_dqn_cartpole()\n",
     "\n",
-    "    params.env_id = 'CartPole-v1'\n",
-    "\n",
-    "    params.rollout_steps = 1\n",
-    "    params.num_processes = 1\n",
-    "    params.actor_lr = 1e-3\n",
-    "    params.gamma = 0.99\n",
-    "    params.target_update_interval = 10\n",
-    "    params.eps_min = 1e-2\n",
-    "    params.buffer_size = 1000\n",
-    "    params.batch_size = 32\n",
-    "    params.num_total_steps = 5000\n",
-    "    params.num_eps_steps = 500\n",
+    "    params.alpha = 0.6\n",
+    "    params.beta = 0.4\n",
+    "    params.beta_anneal_steps = 1000\n",
     "\n",
     "    return params"
    ]
@@ -129,8 +123,8 @@
     "    num_eval=1,\n",
     ")\n",
     "\n",
-    "dqn_cartpole = DQNCartpole(\n",
-    "    hparams_dqn_cartpole(),\n",
+    "per_cartpole = PERCartpole(\n",
+    "    hparams_per_cartpole(),\n",
     "    argparse.Namespace(**args),\n",
     "    None, # Disable logging\n",
     "    device=device,\n",
@@ -142,7 +136,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Training the DQN Agent\n",
+    "## Training the Prioritized DQN Agent\n",
     "\n",
     "Calling the `run()` routine allows us to execute training. Note that for now we have disabled logging by keeping `log_dir=None` in the above instatiation."
    ]
@@ -156,12 +150,12 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 5000/5000 [00:14<00:00, 301.06epochs/s]\n"
+      "100%|██████████| 10000/10000 [00:36<00:00, 277.02epochs/s]\n"
      ]
     }
    ],
    "source": [
-    "dqn_cartpole.run()"
+    "per_cartpole.run()"
    ]
   },
   {
@@ -186,21 +180,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 35.2 s, sys: 2.5 s, total: 37.7 s\n",
-      "Wall time: 39.7 s\n"
+      "CPU times: user 14.4 s, sys: 1.29 s, total: 15.7 s\n",
+      "Wall time: 16.1 s\n"
      ]
     }
    ],
    "source": [
     "%%time\n",
     "\n",
-    "dqn_cartpole.agent.train(False)\n",
+    "per_cartpole.agent.train(False)\n",
     "\n",
-    "eval_runner = dqn_cartpole.make_runner(n_envs=10)\n",
+    "eval_runner = per_cartpole.make_runner(n_envs=10)\n",
     "eval_rewards = []\n",
-    "for _ in range(100 // dqn_cartpole.runner.n_envs):\n",
-    "  eval_history = eval_runner.rollout(dqn_cartpole.agent)\n",
-    "  for i in range(dqn_cartpole.runner.n_envs):\n",
+    "for _ in range(100 // per_cartpole.runner.n_envs):\n",
+    "  eval_history = eval_runner.rollout(per_cartpole.agent)\n",
+    "  for i in range(per_cartpole.runner.n_envs):\n",
     "    _, _, reward_history, _, _ = eval_history[0]\n",
     "    eval_rewards.append(np.sum(reward_history, axis=0))\n",
     "eval_runner.close()"
@@ -215,8 +209,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Reward: 273.17 +/- 142.67628078976549\n",
-      "Did we possibly win? Yay!\n"
+      "Reward: 127.04 +/- 9.356195808126293\n",
+      "Did we possibly win? Nay!\n"
      ]
     }
    ],
@@ -241,19 +235,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "vis_runner = dqn_cartpole.make_runner(n_envs=1)\n",
-    "vis_runner.rollout(dqn_cartpole.agent,render = True)\n",
+    "vis_runner = per_cartpole.make_runner(n_envs=1)\n",
+    "vis_runner.rollout(per_cartpole.agent,render = True)\n",
     "vis_runner.close()"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
-   "source": [
-    "## What's next?\n",
-    "\n",
-    "See [Documentation](https://torchrl.sanyamkapoor.com/) for full details on the flexibility of the API."
-   ]
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
