--- a/notebooks/DQN.ipynb
+++ b/notebooks/DQN.ipynb
@@ -239,57 +239,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import argparse\n",
-    "import torch\n",
-    "import numpy as np\n",
-    "\n",
-    "from torchrl import registry\n",
-    "from torchrl import utils\n",
-    "from torchrl.problems import PrioritizedDQNProblem\n",
-    "from torchrl.agents import BaseDQNAgent\n",
-    "\n",
-    "from cartpole_v1 import DQNCartpole"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We use a pre-built version of the DQN agent from *TorchRL* library to initialize a `Problem`. This `Problem` class is also based on a pre-built version from the library."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class PERCartpole(PrioritizedDQNProblem):\n",
-    "  def init_agent(self):\n",
-    "    observation_space, action_space = utils.get_gym_spaces(self.runner.make_env)\n",
-    "\n",
-    "    agent = BaseDQNAgent(\n",
-    "        observation_space,\n",
-    "        action_space,\n",
-    "        double_dqn=self.hparams.double_dqn,\n",
-    "        lr=self.hparams.actor_lr,\n",
-    "        gamma=self.hparams.gamma,\n",
-    "        num_eps_steps=self.hparams.num_eps_steps,\n",
-    "        target_update_interval=self.hparams.target_update_interval)\n",
-    "\n",
-    "    return agent"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "This class requires us to extend the `init_agent` method. There is no restriction on the contents as long as it returns a valid `BaseAgent`."
+    "We reuse the DQN agent made earlier"
    ]
   },
   {
@@ -308,11 +261,24 @@
    "outputs": [],
    "source": [
     "def hparams_per_cartpole():\n",
-    "    params = DQNCartpole.hparams_dqn_cartpole()\n",
+    "    params = base_hparams.base_dqn()\n",
+    "\n",
+    "    params.env_id = 'CartPole-v1'\n",
     "\n",
     "    params.alpha = 0.6\n",
     "    params.beta = 0.4\n",
     "    params.beta_anneal_steps = 1000\n",
+    "    \n",
+    "    params.rollout_steps = 1\n",
+    "    params.num_processes = 1\n",
+    "    params.actor_lr = 1e-3\n",
+    "    params.gamma = 0.99\n",
+    "    params.target_update_interval = 10\n",
+    "    params.eps_min = 1e-2\n",
+    "    params.buffer_size = 1000\n",
+    "    params.batch_size = 32\n",
+    "    params.num_total_steps = 5000\n",
+    "    params.num_eps_steps = 500\n",
     "\n",
     "    return params"
    ]
@@ -334,16 +300,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "device = torch.device('cuda:0' if torch.cuda.is_available() else 'cpu')\n",
     "\n",
-    "args=dict(\n",
-    "    seed=1,\n",
-    "    log_interval=1000,\n",
-    "    eval_interval=1000,\n",
-    "    num_eval=1,\n",
-    ")\n",
     "\n",
-    "per_cartpole = PERCartpole(\n",
+    "per_cartpole = DQNCartpole(\n",
     "    hparams_per_cartpole(),\n",
     "    argparse.Namespace(**args),\n",
     "    None, # Disable logging\n",
