Fix contrib torchrl imports

--- a/notebooks/dqn_cartpole.ipynb
+++ b/notebooks/dqn_cartpole.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "scrolled": true
    },
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +99,7 @@
     "    params.eps_min = 1e-2\n",
     "    params.buffer_size = 1000\n",
     "    params.batch_size = 32\n",
-    "    params.num_total_steps = 5000\n",
+    "    params.num_total_steps = 10000\n",
     "    params.num_eps_steps = 500\n",
     "\n",
     "    return params"
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,7 +153,16 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\r",
+      "  0%|          | 0/10000 [00:00<?, ?epochs/s]"
+     ]
+    }
+   ],
    "source": [
     "dqn_cartpole.run()"
    ]
@@ -173,9 +182,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 1.47 s, sys: 594 ms, total: 2.06 s\n",
+      "Wall time: 2.22 s\n"
+     ]
+    }
+   ],
    "source": [
     "%%time\n",
     "\n",
@@ -193,9 +211,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Reward: 9.46 +/- 0.7670723564306043\n",
+      "Did we possibly win? Nay!\n"
+     ]
+    }
+   ],
    "source": [
     "avg_reward, std_reward = np.average(eval_rewards), np.std(eval_rewards)\n",
     "possible_win = avg_reward > 195.0\n",
@@ -216,9 +243,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "torchrl (Python 3.7.3)",
    "language": "python",
-   "name": "python3"
+   "name": "torchrl"
   },
   "language_info": {
    "codemirror_mode": {
